# bmpedit

./: .gitignore
bmpedit/: bmpedit.sln
bmpedit/bmpedit/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Image.h  Task2.cpp  bmpedit.cpp  bmpedit.vcxproj  bmpedit.vcxproj.filters  help_tables.txt
bmpedit/bmpedit/Test/: BitmapTest.cpp  Task3Test.cpp  Task3TimeTest.cpp  Task4Test.cpp  config.cpp
bmpedit/bmpedit/include/: Bitmap.h  Task4.h
bmpedit/bmpedit/src/: Bitmap.cpp  Task2.cpp  Task3.cpp  Task4.cpp  main.cpp
